fixes #4510 When adding new annotation calendar was not fully visible is dashboard

--- a/plugins/Annotations/stylesheets/annotations.less
+++ b/plugins/Annotations/stylesheets/annotations.less
@@ -29,6 +29,14 @@
 .annotation-manager {
     text-align: left;
     margin-top: -18px;
+
+  .new-annotation-row {
+    height: 145px;
+  }
+
+  .annotation.edit .annotation-edit-mode {
+    min-height: 125px;
+  }
 }
 
 .annotations-header {
